// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spin > renders Spin spinning primary unchanged 1`] = `
<div>
  <div
    class="memori-spin memori-spin--spinning memori-spin--primary"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </p>
    <h2>
      Suspendisse a sodales nulla, sed semper nisi.
    </h2>
    <p>
      Proin tincidunt enim in felis aliquet, a ultricies purus bibendum.
    </p>
    <ul>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
    </ul>
    <p>
      Nulla at urna diam.
    </p>
  </div>
</div>
`;

exports[`Spin > renders Spin spinning unchanged 1`] = `
<div>
  <div
    class="memori-spin memori-spin--spinning"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </p>
    <h2>
      Suspendisse a sodales nulla, sed semper nisi.
    </h2>
    <p>
      Proin tincidunt enim in felis aliquet, a ultricies purus bibendum.
    </p>
    <ul>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
    </ul>
    <p>
      Nulla at urna diam.
    </p>
  </div>
</div>
`;

exports[`Spin > renders Spin unchanged 1`] = `
<div>
  <div
    class="memori-spin"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </p>
    <h2>
      Suspendisse a sodales nulla, sed semper nisi.
    </h2>
    <p>
      Proin tincidunt enim in felis aliquet, a ultricies purus bibendum.
    </p>
    <ul>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
    </ul>
    <p>
      Nulla at urna diam.
    </p>
  </div>
</div>
`;

exports[`Spin > renders Spin with custom className unchanged 1`] = `
<div>
  <div
    class="memori-spin lorem-ipsum"
  >
    <p>
      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    </p>
    <h2>
      Suspendisse a sodales nulla, sed semper nisi.
    </h2>
    <p>
      Proin tincidunt enim in felis aliquet, a ultricies purus bibendum.
    </p>
    <ul>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
      <li>
        Quisque in ultrices lectus.
      </li>
    </ul>
    <p>
      Nulla at urna diam.
    </p>
  </div>
</div>
`;
